clusters/cluster1/kubernetes/apps/auth/pocket-id/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: auth
  labels:
    app: pocket-id
spec:
  type: ClusterIP
  selector:
    app: pocket-id
  ports:
    - name: http
      port: 1411
      targetPort: http
      protocol: TCP
