clusters/cluster1/kubernetes/apps/auth/pocket-id/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: auth
spec:
  hostnames:
    - id.biggs.dog
  parentRefs:
    - name: wildcard-biggs-dog
      namespace: networking
  rules:
    - backendRefs:
        - name: pocket-id
          port: 1411
      matches:
        - path:
            type: PathPrefix
            value: /
